[gd_scene load_steps=4 format=3 uid="uid://fsow1ucof4ir"]

[ext_resource type="Script" path="res://light/light_orb.gd" id="1_e561f"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ntq66"]
transparency = 1
albedo_color = Color(0.796078, 0.980392, 0.596078, 0.152941)
emission_enabled = true
emission = Color(0.796078, 0.980392, 0.596078, 1)
emission_energy_multiplier = 12.0

[sub_resource type="SphereMesh" id="SphereMesh_qp15f"]
material = SubResource("StandardMaterial3D_ntq66")
radius = 0.04
height = 0.08

[node name="LightOrb" type="Node3D"]
script = ExtResource("1_e561f")

[node name="OmniLight" type="OmniLight3D" parent="."]
unique_name_in_owner = true
light_color = Color(0.796078, 0.980392, 0.596078, 1)
omni_attenuation = 0.138696

[node name="LightMesh" type="MeshInstance3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1.00001, 0, 0, 0, 1.00001, 0, 0, 0)
mesh = SubResource("SphereMesh_qp15f")
skeleton = NodePath("../../..")
